2008-03-05  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh: (CygbuildDefineGlobalCommands):
	Define GPG, WGET conditionally.
	(CygbuildGPGavailableCheck): Change from negative tests
	to positive tests.
	(CygbuildCmdDownloadCygwinPackage): Rewrite WGET test.
	(CygbuildCommandMain): Move `CygbuildDefineGlobalCommands'
	here from CygbuildCommandMain().
	(CygbuildCmdDownloadCygwinPackage): Rewite wget test.
	(CygbuildDefineGlobalCommands): Remove variable BASH.
	(CygbuildPathBinFast): Fix serious error. Return 1 if
	path is not found.
	(CygbuildMatchPatternList): Renamed. Was
	`CygbuildMatchBashPatternList'.
	(CygbuildBootVariablesId): Set CYGBUILD_PROG_PATH by searching
	PATH as last resort.
	(CygbuildCmdConfMain): Use CygbuildIsPerlPackage.
	Add Python handling.
	(CygbuildInstallCygwinPartMain): Improve error message.
	(CygbuildBootVariablesGlobalCacheSet): Display message only
	if verbose mode is on.
	(CygbuildCmdMkdirs): Display message only
	if verbose mode is on.
	(CygbuildCommandMain::import): Add readmefix and move mkdir command.

	[ commit: 21c6baa ]

	* bin/cygbuild.sh: (CygbuildBootVariablesGlobalCacheSet): Move
	message. Clear CYGBUILD_CACHE_PERL_FILES if no cache can be set.
	(CygbuildPerlLibraryDependsCache): Check cache variable.

	[ commit: 0a6b221..6cc78b6 ]

	* bin/cygbuild.sh: REFACTORING: Convert all $LS, $MV etc.
	variables into regular calls in series of commits.

	[ up to commit: 0a6b221 ]

	* bin/cygbuild.pl: (HELP::QUICK OVERVIEW): Remove key id
	and use $GPGKEY variable in example.

	* README: Adjust short description.
	(Version control information): Add new topic.
	(Version control information): Moved from INSTALL.
	(Dependencies): Moved from INSTALL.

	* INSTALL: (Install instructions): Mention /usr/local and
	prefix= setting. Remove verything but install instructions.

	* Makefile: (install-etc-main-symlink): disable installing
	/etc/cygbuild/programs.conf. No longer used.
